# DRF_project

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
docker/: Dockerfile  migrate.sh  start_celery_beat.sh
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_rename_periodicity_habit_periodicity.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_custom_superuser.py
users/migrations/: 0001_initial.py  0002_user_telegram_user_id.py
